# slurm-spank-rs

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  test  test.c  wrapper.h
.github/workflows/: ci.yml  release-plz.yml
docker/: Dockerfile  entrypoint.sh
example/: Cargo.toml
example/hello/: Cargo.toml
example/hello/src/: lib.rs
example/renice/: Cargo.toml
example/renice/src/: lib.rs
example/src/: lib.rs
src/: bindings.rs  hello.md  lib.rs  spank_sys.rs
test/: Cargo.toml  test.bats
test/src/: lib.rs
tests/: Cargo.toml
tests/src/: lib.rs
