[package]
name = "slurm-spank"
version = "0.1.0"
authors = ["Francois Diakhate <fdiakh@gmail.com>"]
edition = "2018"

[lib]
name = "slurm_spank"

[dependencies]
lazy_static = "1.4.0"
libc = "0.2.94"
num_enum = "0.5.1"
tracing = { version = "0.1.26"}
tracing-core = "0.1.18"
tracing-subscriber = "0.2.19"

[build-dependencies]
bindgen = "0.58.1"

[features]
slurm_20_11 = []

