[package]
name = "slurm-spank"
version = "0.2.4"
authors = ["Francois Diakhate <fdiakh@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Safe Rust bindings to the Slurm SPANK API"
repository = "https://github.com/fdiakh/slurm-spank-rs"
readme = "README.md"
keywords = ["Slurm", "SPANK", "plugin", "HPC", "cluster"]

[lib]
name = "slurm_spank"

[dependencies]
byte-strings = "0.2.2"
lazy_static = "1.4.0"
libc = "0.2.144"
num_enum = "0.6.1"
tracing = "0.1.37"
tracing-core = "0.1.30"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[build-dependencies]
bindgen = "0.65.1"
