[workspace]
resolver = "2"
exclude = ["example", "test"]

[package]
name = "slurm-spank"
version = "0.4.0"
authors = ["Francois Diakhate <fdiakh@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Safe Rust bindings to the Slurm SPANK API"
repository = "https://github.com/fdiakh/slurm-spank-rs"
readme = "README.md"
keywords = ["Slurm", "SPANK", "plugin", "HPC", "cluster"]

[lib]
name = "slurm_spank"

[dependencies]
byte-strings = "0.3.1"
lazy_static = "1.5.0"
libc = "0.2.172"
num_enum = "0.7.3"
tracing = "0.1.41"
tracing-core = "0.1.33"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[build-dependencies]
bindgen = "0.71.1"
